--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -1,55 +1,88 @@
-# Colors (One Darker)
-# Note I am using alacritty-ligatures until ligatures make it upstream
+# Nightfox Alacritty Colors
+# Style: nordfox
+# Upstream: https://github.com/edeneast/nightfox.nvim/raw/main/extra/nordfox/nightfox_alacritty.yml
 colors:
   # Default colors
   primary:
-    # background: "#232731"
-    background: "#1f2227"
-    foreground: "#abb2bf"
-
+    background: '0x2e3440'
+    foreground: '0xcdcecf'
   # Normal colors
-  # Nord
   normal:
-    black: "#4C566A"
-    red: "#bf616a"
-    green: "#A3BE8C"
-    yellow: "#D7BA7D"
-    blue: "#5e81ac"
-    magenta: "#B48EAD"
-    cyan: "#88c0d0"
-    white: "#abb2bf"
-
+    black:   '0x3b4252'
+    red:     '0xbf616a'
+    green:   '0xa3be8c'
+    yellow:  '0xebcb8b'
+    blue:    '0x81a1c1'
+    magenta: '0xb48ead'
+    cyan:    '0x88c0d0'
+    white:   '0xe5e9f0'
   # Bright colors
   bright:
-    black: "#4C566A"
-    red: "#bf616a"
-    green: "#A3BE8C"
-    yellow: "#D7BA7D"
-    blue: "#5e81ac"
-    magenta: "#B48EAD"
-    cyan: "#88c0d0"
-    white: "#abb2bf"
+    black:   '0x465780'
+    red:     '0xd06f79'
+    green:   '0xb1d196'
+    yellow:  '0xf0d399'
+    blue:    '0x8cafd2'
+    magenta: '0xc895bf'
+    cyan:    '0x93ccdc'
+    white:   '0xe7ecf4'
+  indexed_colors:
+    - { index: 16, color: '0xc9826b' }
+    - { index: 17, color: '0xbf88bc' }
 
+# # Colors (One Darker)
+# # Note I am using alacritty-ligatures until ligatures make it upstream
+# colors:
+#   # Default colors
+#   primary:
+#     # background: "#232731"
+#     background: "#1f2227"
+#     foreground: "#abb2bf"
+#
+#   # Normal colors
+#   # Nord
 #   normal:
-#     black: "#4b5263"
-#     red: "#e06c75"
-#     green: "#98C379"
-#     yellow: "#E5C07B"
-#     blue: "#61AFEF"
-#     magenta: "#C678DD"
-#     cyan: "#56B6C2"
+#     black: "#4C566A"
+#     red: "#bf616a"
+#     green: "#A3BE8C"
+#     yellow: "#D7BA7D"
+#     blue: "#5e81ac"
+#     magenta: "#B48EAD"
+#     cyan: "#88c0d0"
 #     white: "#abb2bf"
-# 
+#
 #   # Bright colors
 #   bright:
-#     black: "#4b5263"
-#     red: "#e06c75"
-#     green: "#98C379"
-#     yellow: "#E5C07B"
-#     blue: "#61AFEF"
-#     magenta: "#C678DD"
-#     cyan: "#56B6C2"
+#     black: "#4C566A"
+#     red: "#bf616a"
+#     green: "#A3BE8C"
+#     yellow: "#D7BA7D"
+#     blue: "#5e81ac"
+#     magenta: "#B48EAD"
+#     cyan: "#88c0d0"
 #     white: "#abb2bf"
+
+#   # Other colors
+  # normal:
+  #   black: "#4b5263"
+  #   red: "#e06c75"
+  #   green: "#98C379"
+  #   yellow: "#E5C07B"
+  #   blue: "#61AFEF"
+  #   magenta: "#C678DD"
+  #   cyan: "#56B6C2"
+  #   white: "#abb2bf"
+  #
+  # # Bright colors
+  # bright:
+  #   black: "#4b5263"
+  #   red: "#e06c75"
+  #   green: "#98C379"
+  #   yellow: "#E5C07B"
+  #   blue: "#61AFEF"
+  #   magenta: "#C678DD"
+  #   cyan: "#56B6C2"
+  #   white: "#abb2bf"
 
   # background_opacity: 1.0
 
