--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -51,7 +51,9 @@ bindsym $mod+Return exec alacritty
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+space exec --no-startup-id dmenu_run
+# bindsym $mod+space exec --no-startup-id dmenu_run
+# start rofi
+bindsym $mod+space exec --no-startup-id rofi -show drun -theme Arc-Dark -font "hack 10" -show-icon
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
