config wallpaper with nitrogen

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -186,3 +186,8 @@ bindsym $mod+r mode "resize"
 bar {
         status_command i3status
 }
+
+# Set wallpaper
+# exec_always feh --bg-scale /home/pbd0/.newborn/wallpapers/humpback.png
+exec nitrogen --restor /home/pbd0/.newborn/wallpapers/humpback.png
+
