--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -98,21 +98,21 @@ cursor:
 font:
   # The normal (roman) font face to use.
   normal:
-    family: Hack Nerd Font
+    family: BigBlueTermPlus Nerd Font
     # Style can be specified to pick a specific face.
     style: Regular
 
   # The bold font face
   bold:
-    family: Hack Nerd Font
+    family: BigBlueTermPlus Nerd Font
     # Style can be specified to pick a specific face.
-    style: Bold
+    style: Propo
 
   # The italic font face
   italic:
-    family: Hack Nerd Font
+    family: BigBlueTermPlus Nerd Font
     # Style can be specified to pick a specific face.
-    style: Italic
+    style: Mono
 
   size: 13.0
 
