--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -12,9 +12,9 @@ startup_mode = "Maximized"
 history = 10000
 
 [font]
-normal = { family = "BigBlueTermPlus Nerd Font", style = "Regular"}
-bold = { family = "BigBlueTermPlus Nerd Font", style = "Propo"}
-italic = { family = "BigBlueTermPlus Nerd Font", style = "Mono"}
+normal = { family = "MartianMono Nerd Font", style = "Regular"}
+bold = { family = "MartianMono Nerd Font", style = "Propo"}
+italic = { family = "MartianMono Nerd Font", style = "Mono"}
 size = 13
 glyph_offset = { x = 0, y = 0}
 
