--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -42,11 +42,13 @@
 # # Just for example:
 # resize-overlay-duration = 4s 200ms
 background-opacity = 0.64
+background-blur = true
 font-family = "Martian Mono"
-font-size = 14
+font-size = 16
 adjust-cell-height = 20%
 window-decoration = "none"
-
+maximize
+bold-is-bright = true
 # Colorscheme
 theme = "Neutron"
 
